@@ -1,3 +1,9 @@
+2007-07-01  Jens Granseuer  <jensgr@gmx.net>
+
+	* gconf-property-editor.c: (peditor_string_value_changed),
+	(peditor_color_value_changed): add safeguards for NULL values (closes
+	bug #441036)
+
 2007-06-29  Jens Granseuer  <jensgr@gmx.net>
 
 	* gconf-property-editor.c: (peditor_string_value_changed): compare the
